Fix ClassLoader leak